Add new bottom navigation layout
This will later replace the existing default bottom navigation bar.
Necessary resource values are also added.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+
+    <string name="bottom_nav_label_requestequipment">Request\nEquipment</string>
+    <string name="bottom_nav_label_activerentals">Active\nRentals</string>
+    <string name="bottom_nav_label_openrequests">Open\nRequests</string>
+    <string name="bottom_nav_label_myyard">My Yard</string>
 </resources>
