--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,10 @@
 <resources>
     <string name="app_name">CDL Exercise</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+
+    <string name="title_requestequipment">Request Equipment</string>
+    <string name="title_activerentals">Active Rentals</string>
+    <string name="title_openrequests">Open Requests</string>
+    <string name="title_myyard">My Yard</string>
 
     <string name="bottom_nav_label_requestequipment">Request\nEquipment</string>
     <string name="bottom_nav_label_activerentals">Active\nRentals</string>
